# tool-arg-fuzzy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_arg_fuzzy/: __init__.py
tests/: test_fuzzy.py
