[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tool-arg-fuzzy"
version = "0.1.0"
description = "Fuzzy-match LLM-generated tool args to JSON Schema enum values. 'anthropic' → 'Anthropic', 'lg' → 'large'. Zero deps, no Levenshtein."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "agents",
  "tool",
  "fuzzy-match",
  "enum",
  "jsonschema",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-arg-fuzzy"
Source = "https://github.com/MukundaKatta/tool-arg-fuzzy"
Issues = "https://github.com/MukundaKatta/tool-arg-fuzzy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_arg_fuzzy"]
